--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Acm : ACM problems I have solved." />
+    <meta name="description" content="ACM ICPC Problem Solutions : Archive of ACM ICPC programming problems I have solved" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Acm</title>
+    <title>ACM ICPC Problem Solutions</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/chumekaboom/ACM">View on GitHub</a>
 
-          <h1 id="project_title">Acm</h1>
-          <h2 id="project_tagline">ACM problems I have solved.</h2>
+          <h1 id="project_title">ACM ICPC Problem Solutions</h1>
+          <h2 id="project_tagline">Archive of ACM ICPC programming problems I have solved</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/chumekaboom/ACM/zipball/master">Download this project as a .zip file</a>
@@ -32,16 +32,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="acm" class="anchor" href="#acm"><span class="octicon octicon-link"></span></a>ACM</h1>
+<a name="acm-icpc-problem-solutions" class="anchor" href="#acm-icpc-problem-solutions"><span class="octicon octicon-link"></span></a>ACM ICPC Problem Solutions</h1>
 
-<p>ACM problems I have solved.</p>
+<p>Archive of ACM ICPC programming problems I have solved</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Acm maintained by <a href="https://github.com/chumekaboom">chumekaboom</a></p>
+        <p class="copyright">ACM ICPC Problem Solutions maintained by <a href="https://github.com/chumekaboom">chumekaboom</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
