--- a/index.html
+++ b/index.html
@@ -1,52 +1,4 @@
-<!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="ACM ICPC Problem Solutions : Archive of ACM ICPC programming problems I have solved" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>ACM ICPC Problem Solutions</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/chumekaboom/ACM">View on GitHub</a>
-
-          <h1 id="project_title">ACM ICPC Problem Solutions</h1>
-          <h2 id="project_tagline">Archive of ACM ICPC programming problems I have solved</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/chumekaboom/ACM/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/chumekaboom/ACM/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="acm-icpc-problem-solutions" class="anchor" href="#acm-icpc-problem-solutions"><span class="octicon octicon-link"></span></a>ACM ICPC Problem Solutions</h1>
-
-<p>Archive of ACM ICPC programming problems I have solved</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">ACM ICPC Problem Solutions maintained by <a href="https://github.com/chumekaboom">chumekaboom</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+herp
 </html>
