added favicon to index page and added title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+<link rel="shortcut icon"
+ href="bin/favicon.ico" />
 
-herp
+<head>
+<title>Charlie's ACM Solutions</title>
+</head>
+body
+
 </html>
