added all files to bin

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
 <title>Charlie's ACM Solutions</title>
 </head>
-body
+<H1><center>ACM problems I have solved</center></H1>
+<embed src="bin/2782/2782.pdf" width="800" height="600" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+<object name="foo" type="text/html" data="bin/2782/2782.cpp" width="400" height="600"></object>
 
 </html>
